Bug 837552, crash in nsMsgDatabase::CopyHdrFromExistingHdr with filters, r=neil

--HG--
extra : rebase_source : 0f5c8d0662ee7ef558b13c93cc71adb1a979c238